--- a/cmc-pro-admin/src/main/resources/application.yml
+++ b/cmc-pro-admin/src/main/resources/application.yml
@@ -6,12 +6,19 @@ spring:
       password: java1234
       driver-class-name: com.mysql.jdbc.Driver
       db-type: com.alibaba.druid.pool.DruidDataSource
+  cache:
+    type: ehcache
+    ehcache:
+      config: classpath:/ehcache.xml
+#server:
+#  servlet:
+#    context-path: /mng
 mybatis-plus:
   # 如果是放在src/main/java目录下 classpath:/com/yourpackage/*/mapper/*Mapper.xml
   # 如果是放在resource目录 classpath:/mapper/*Mapper.xml
   mapper-locations: classpath:/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.higitech.cmcpro.admin.**.entity
+  typeAliasesPackage: com.higitech.cmcpro.admin.**.model
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 0
