--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Created by .ignore support plugin (hsz.mobi)
-### Maven template
+### Maven templates
 target/
 pom.xml.tag
 pom.xml.releaseBackup
